# broker-agent

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: python-typing.mdc
broker_agent/browser/: scraping_browser.py  script_executor.py  user_agent_rotator.py  utils.py
broker_agent/browser/scripts/apartments_dot_com/: __init__.py  apartments_dot_com_listing.py  apartments_dot_com_search.py  utils.py
broker_agent/browser/scripts/streeteasy/: streeteasy.py  streeteasy_listing.py  streeteasy_search.py
broker_agent/cli/: analyze_apt_imgs.py  scrape.py  test_crawl4ai.py
broker_agent/common/: enum.py  exceptions.py  types.py  utils.py
broker_agent/config/: browser.yaml  config.py  default.yaml  image_analysis.yaml  logging.py  settings.py
broker_agent/llm/: client.py
broker_agent/pipeline/: tasks.py
database/: .env.example  connection.py  models.py
database/alembic/: env.py
database/alembic/models/: models.py
database/alembic/versions/: 0929d49bf793_made_links_unique.py  0dd05b94c536_added_price_to_apartment_class.py  45eb195b5d02_added_more_optional_fields_to_apartments.py  6144ec41f0d3_more_apt_listing_metadata.py  626177592f6d_added_price_history.py  765360ebcbf7_added_more_fields_to_extract_for_.py  84acdead0d66_added_ai_summary_field.py  9f5ad1a3fa87_added_apartment_tag_enum_table.py  d71264114eeb_baseline.py  eb567c054e5e_baseline.py
docs/: architecture.drawio
docs/adr/: 000-template.md  001-simple_architecture.md  002-mvp_architecture.md  003-dynamic_playwright.md  004-structured_frontend.md  005-python_version.md  006-agentic_framework_choice.md  007-constrained_playwright.md  008-database_arch.md  009-monorepo_vs_microservice.md  010-blob_storage.md  011-playwright_script_architecture.md  012-scraping_browser.md
exploratory/: firecrawl.ipynb  playwright.ipynb  scrapy.ipynb
storage/: minio_client.py
tests/: __init__.py
