[tool.poetry]
name = "broker_agent"
version = "0.1.0"
description = "Your very own AI real estate search agent!"
authors = ["Gage Anderson <gage@gageanderson.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pre-commit = "^4.2.0"


[tool.poetry.group.dev.dependencies]
commitizen = "^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
# Customize allowed types
allowed_commit_types = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]