[tool.poetry]
name = "broker_agent"
version = "0.1.0"
description = "Your very own AI real estate search agent!"
authors = ["Gage Anderson <gage@gageanderson.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pre-commit = "^4.2.0"
playwright = "^1.51.0"
python-dotenv = "^1.1.0"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"
langchain = "^0.3.24"
langgraph = "^0.3.34"
chromadb = "^1.0.7"
alembic = "^1.15.2"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
click = "^8.2.0"
asyncpg = "^0.30.0"
minio = "^7.2.15"
ollama = "^0.4.8"
langchain-ollama = "^0.3.3"
playwright-stealth = "^1.0.6"
crawl4ai = "^0.6.3"


[tool.poetry.group.dev.dependencies]
commitizen = "^4.6.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
mypy = "^1.15.0"
ruff = "^0.11.7"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
# Customize allowed types
allowed_commit_types = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E203",  # Space before : (needed for black compatibility)
    "E501",  # Line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["broker_agent"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.poetry.scripts]
scrape = "broker_agent.cli.scrape:run_scraper"
analyze_apt_imgs = "broker_agent.cli.analyze_apt_imgs:run_analyze_apt_imgs"
crawl4ai = "broker_agent.cli.test_crawl4ai:run_crawl4ai"